--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- <script src="//webapi.amap.com/ui/1.0/main.js"></script> -->
+    <link rel="stylesheet" href="./dark.css">
     <link rel="icon" href="<%= BASE_URL %>logo.png">
     <!-- <title><%= webpackConfig.name %></title> -->
     <title>Z-some-wheels</title>
