已经上传到npm
已经把整个组件库上传到npm

--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
-<title>ZsomeWheels demo</title>
-<script src="./ZsomeWheels.umd.js"></script>
+<title>zsomewheels demo</title>
+<script src="./zsomewheels.umd.js"></script>
 
-<link rel="stylesheet" href="./ZsomeWheels.css">
+<link rel="stylesheet" href="./zsomewheels.css">
 
 
 <script>
-console.log(ZsomeWheels)
+console.log(zsomewheels)
 </script>
