--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <noscript>
       <strong>We're sorry but <%= webpackConfig.name %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">123</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
